first post and disqus settings

--- a/_layouts/postlayout.html
+++ b/_layouts/postlayout.html
@@ -58,7 +58,7 @@
 <div class="wrapper" id="disqus_thread"></div>
     <script type="text/javascript">
         if(!document.location.hostname.includes("localhost")) {
-          var disqus_shortname = 'amihaiemil';
+          var disqus_shortname = 'self-xdsd-blog';
           var disqus_identifier = "{{ page.url }}";
 
           (function() {
@@ -73,7 +73,7 @@
     <a href="https://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
 {% endif %}
     {% include footer.html %}
-    <script id="dsq-count-scr" src="//amihaiemil.disqus.com/count.js" async></script>
+    <script id="dsq-count-scr" src="//self-xdsd-blog.disqus.com/count.js" async></script>
     {% include includeIndex.js %}
     <script
         type="text/javascript"
