--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="site-footer">
   <div class="centered">
-    © self-xdsd.com 2021
+    © self-xdsd.com 2021-2022
     <span>Website last updated at: <span id="lastupdated"></span></span>
   </div>
 </footer>
